# rivet

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICE  README.md  TODO.md
.cargo/: config.toml
crates/codec/: Cargo.toml  README.md
crates/codec/benches/: bilinear.rs  colorspace.rs  colorspace_601_to_709.rs  downsample_444_to_420.rs  nvdec_decode.rs  scale.rs
crates/codec/src/: amf_device.rs  codec_strings.rs  colorspace.rs  cuda_lock.rs  filter.rs  frame.rs  gpu.rs  hevc_sei.rs  lib.rs  pixel_format.rs  probe.rs  qsv_ffi.rs  tonemap.rs
crates/codec/src/audio/: mod.rs  resample.rs
crates/codec/src/audio/decode/: mod.rs  mp3.rs  vorbis.rs
crates/codec/src/audio/encode/: mod.rs  opus.rs
crates/codec/src/audio/encode/opus/: dops.rs  mod.rs  multistream.rs  tests.rs
crates/codec/src/colorspace/: bt601_to_709.rs  bt601_to_709_10bit.rs  chroma_convert.rs  downsample_444.rs  mod.rs  scale.rs  tests.rs
crates/codec/src/decode/: amf_dec.rs  ffmpeg.rs  mod.rs  nvdec.rs  nvidia.rs  qsv.rs  qsv_dec.rs
crates/codec/src/encode/: amf.rs  amf_stub.rs  ffmpeg_enc.rs  mod.rs  nvenc.rs  nvenc_stub.rs  qsv.rs  tuning.rs
crates/codec/src/encode/tuning/: adapters.rs  mod.rs  params.rs  tests.rs
crates/codec/src/filter/: brightness.rs  contrast.rs  crop.rs  grayscale.rs  hflip.rs  invert.rs  mod.rs  overlay.rs  pad.rs  rotate.rs  saturation.rs  tests.rs  vflip.rs
crates/codec/src/filter/denoise/: anisotropic.rs  bilateral.rs  gaussian.rs  mean.rs  median.rs  mod.rs  nlmeans.rs
crates/codec/src/gpu/: amd.rs  intel.rs  mod.rs  nvidia.rs  sysfs.rs  types.rs  utilization.rs
crates/codec/tests/: gpu_vendor_matrix.rs  nvdec_smoke.rs
crates/container/: Cargo.toml  LICENSE.md  README.md
crates/container/src/: aac_asc.rs  ac3_sync.rs  annexb.rs  avi.rs  cmaf.rs  demux.rs  hls.rs  lib.rs  mp4_sanitize.rs  mux.rs  nal_mux.rs  streaming.rs  ts.rs
crates/container/src/avi/: mod.rs  opendml.rs  riff.rs  streaming.rs  tests.rs
crates/container/src/cmaf/: fragment.rs  init.rs  mod.rs  tests.rs
crates/container/src/demux/: audio.rs  hdr.rs  mkv.rs  mod.rs  mp4.rs  tests.rs
crates/container/src/mux/: audio_track.rs  boxes.rs  mdat.rs  mod.rs  sample_table.rs  tests.rs  video_track.rs
crates/container/src/ts/: audio.rs  framerate.rs  mod.rs  pat_pmt.rs  pes.rs  streaming.rs  tests.rs
crates/container/tests/: aac_extensions.rs  ac3_eac3_mux.rs  apple_compat.rs  audio_mux.rs  hdr_extraction.rs  mkv_demux.rs  mp4_avcc_pps.rs  mux_boxes.rs  opus_mux.rs  streaming_demux.rs  streaming_equality.rs  ts_avi_mov_demux.rs  ts_sps_dims.rs
crates/rivet/: Cargo.toml
crates/rivet/src/: decode_pump.rs  encoder_worker.rs  gpu_pool.rs  job.rs  ladder.rs  lib.rs  main.rs  manifest.rs  multigpu.rs  progress.rs  server.rs  settings.rs  spec.rs  thumbnail.rs  validate.rs
crates/rivet/tests/: server_api.rs
docs/: README.md  api.md  architecture.md  batch.md  cli.md  codec-decode.md  codec-encode.md  container.md  decisions.md  engine.md  filters.md  output-spec.md  pipeline.md
