[workspace]
resolver = "2"
members = [
    "crates/codec",
    "crates/container",
    "crates/rivet",
]

# shiguredo_vpl (Intel oneVPL bindings) used by the codec QSV backend.
# Pinned to a specific rev rather than tracking `develop`: we need the
# multi-adapter session-pinning API (`list_adapters`,
# `AdapterSelector::DrmRenderNode`, adapter-mandatory `EncoderConfig::new`
# / `DecoderConfig::new`) which merged into develop, but `develop` HEAD
# (1c8ec3b) bumped libvpl 2.16.0 -> 2.17.0, and 2.17.0's headers make
# bindgen emit the `MFX_*` FOURCC/codec constants as `i32` instead of
# `u32`, which fails to compile the crate's `-> u32` accessors. Rev
# b826324 is the commit immediately before that bump: same multi-adapter
# code, libvpl 2.16.0, compiles clean. Revisit when upstream fixes the
# 2.17.0 constant typing.
[workspace.dependencies.shiguredo_vpl]
git = "https://github.com/shiguredo/vpl-rs"
rev = "b826324033c4807cb59dd8361813545f44bc5798"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/elyerinfox/rivet"
authors = ["Ely Erin Fox"]

[workspace.dependencies]
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes              = "1"
mp4                = "0.14"
matroska-demuxer   = "0.7"
libloading         = "0.8"
tempfile           = "3"
criterion          = { version = "0.5", features = ["html_reports"] }
nvml-wrapper       = "0.10"
clap               = { version = "4", features = ["derive"] }

# Member crates (path deps so the workspace builds standalone).
codec     = { path = "crates/codec" }
container = { path = "crates/container" }

# Fully optimized release build. Fat LTO across all crates, single
# codegen unit, abort on panic (drops unwind tables). `strip =
# "debuginfo"` keeps symbol names so production panics resolve to
# function names.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
opt-level = 3

# Faster iteration build: release-class binary without the fat-LTO cost.
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
