[workspace]
resolver = "2"
members = [
    "crates/codec",
    "crates/container",
    "crates/rivet",
]

# GPU hardware codec FFI (NVENC/NVDEC, AMD AMF, Intel QSV/oneVPL) is hand-rolled
# in-tree (crates/codec/src/{encode,decode}/) — no external wrapper crates. The
# shiguredo_nvcodec / shiguredo_amf / shiguredo_vpl deps were all retired because
# they don't compile on Windows MSVC; our dlopen FFI builds on Windows + Linux.

[workspace.package]
version = "0.1.1"
edition = "2024"
# Custom source-available license (not a standard SPDX id), so use license-file.
license-file = "LICENSE.md"
repository = "https://github.com/elyerinfox/rivet"
authors = ["Ely Erin Fox"]

[workspace.dependencies]
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes              = "1"
mp4                = "0.14"
matroska-demuxer   = "0.7"
libloading         = "0.8"
tempfile           = "3"
criterion          = { version = "0.5", features = ["html_reports"] }
nvml-wrapper       = "0.10"
clap               = { version = "4", features = ["derive"] }
tokio              = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }

# Member crates. path = local build; version + package = crates.io publish
# (published as rivet-codec / rivet-container; imported as codec / container).
codec     = { path = "crates/codec", version = "0.1.1", package = "rivet-codec" }
container = { path = "crates/container", version = "0.1.1", package = "rivet-container" }

# Fully optimized release build. Fat LTO across all crates, single
# codegen unit, abort on panic (drops unwind tables). `strip =
# "debuginfo"` keeps symbol names so production panics resolve to
# function names.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
opt-level = 3

# Faster iteration build: release-class binary without the fat-LTO cost.
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
