[package]
name = "rivet-container"
version.workspace = true
edition.workspace = true
license-file = "LICENSE.md"
readme = "README.md"
repository.workspace = true
authors.workspace = true
description = "Clean-room container demux (MP4/MKV/TS/AVI) and mux (AV1 MP4, CMAF, HLS) for the rivet transcoder, no FFmpeg. Imported as `container`."

[lib]
name = "container"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
mp4.workspace = true
matroska-demuxer.workspace = true
tempfile.workspace = true
codec = { path = "../codec", version = "0.1.4", package = "rivet-codec" }

[lints.rust]
# `streaming_api_landed` is the post-merge gate flag for the
# streaming-migration #55 QA equality tests
# (`tests/streaming_equality.rs`). Tests are compile-excluded on
# this branch; flipped on at integration time via
# `RUSTFLAGS="--cfg streaming_api_landed"`. Registering the cfg here
# silences the rust 1.80+ `unexpected_cfgs` warning without affecting
# default behaviour.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(streaming_api_landed)'] }
