[package]
name = "rivet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Modular GPU-accelerated video transcoding library and CLI (AV1 + Opus, MP4/CMAF-HLS)."

[lib]
name = "rivet"
path = "src/lib.rs"

[[bin]]
name = "rivet"
path = "src/main.rs"

[dependencies]
codec.workspace = true
container.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tokio.workspace = true
bytes.workspace = true
tempfile.workspace = true

# Optional — only for the `thumbnail` feature. ravif wraps rav1e for AVIF
# still-image encode (reuses the AV1 codec story); rgb provides the pixel
# triplet type ravif consumes.
ravif = { version = "0.11", default-features = false, features = ["threading"], optional = true }
rgb = { version = "0.8", optional = true }

[dev-dependencies]
tempfile.workspace = true

# Forward the optional ffmpeg decode backend through to the codec crate
# so `cargo build -p rivet --features ffmpeg` lights up the libavcodec
# primary decode path end-to-end.
[features]
default = []
ffmpeg = ["codec/ffmpeg"]
# Intel QuickSync / oneVPL hardware decode+encode (needs CMake + libvpl
# toolchain; only useful on Intel Arc / Meteor Lake+ hosts).
qsv = ["codec/qsv"]
# NVENC AV1 encoder via shiguredo_nvcodec (Apache-2.0). Needs libclang at
# build time; dlopens CUDA at runtime. Useful on NVIDIA Ada+ hosts.
nvidia = ["codec/nvidia"]
# AMF AV1 encoder via shiguredo_amf (Apache-2.0). Needs libclang at build
# time; dlopens the AMF runtime. Useful on AMD RDNA3+ hosts.
amd = ["codec/amd"]
# AVIF single-frame thumbnail capture (pulls ravif + rav1e — a heavy
# still-image encoder — so it is opt-in).
thumbnail = ["dep:ravif", "dep:rgb"]
